Resolve #193 add buttons to hide/show docs and expand/collapse the interaction tool

--- a/dashboard/dash.less
+++ b/dashboard/dash.less
@@ -76,6 +76,17 @@ body {
 			background-color: #ccc;
 		}
 	}
+	.showDocs {
+		float: right;
+	}
+	.hideDocs {
+		float: right;
+	}
+	.col-md-6 {
+		.showDocs {
+			display: none;
+		}
+	}
 	.submitRequest {
 		float: right;
 		margin-left: 10px;
@@ -83,6 +94,7 @@ body {
 	.resetRequest {
 		display: none;
 		float: right;
+		margin-left: 10px;
 	}
 	.micro {
 		padding: 5px 0;
